# voicevox_core

./: Cargo.toml  wasm_build.bash  wasm_build_replace.rb
.github/workflows/: build_and_deploy.yml
crates/download/src/: main.rs
crates/voicevox_core/: Cargo.toml  wasm_library.js
crates/voicevox_core/src/: devices.rs  infer.rs  inference_core.rs  lib.rs  status.rs  voice_model.rs  voice_synthesizer.rs
crates/voicevox_core/src/__internal/: doctest_fixtures.rs
crates/voicevox_core/src/infer/: runtimes.rs  session_set.rs  status.rs
crates/voicevox_core/src/infer/domains/: talk.rs
crates/voicevox_core/src/infer/runtimes/: onnxruntime.rs  onnxruntime_wasm.rs
crates/voicevox_core/src/user_dict/: dict.rs
crates/voicevox_core_c_api/: Cargo.toml  build.rs
crates/voicevox_core_c_api/src/: c_impls.rs  compatible_engine.rs  lib.rs  wasm.rs
crates/voicevox_core_java_api/lib/: build.gradle
crates/voicevox_core_java_api/src/: logger.rs
crates/voicevox_core_python_api/: Cargo.toml
crates/voicevox_core_ruby_api/: .gitignore  .rubocop.yml  CODE_OF_CONDUCT.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  voicevox_core.gemspec  voicevox_core_ruby_api.gemspec
crates/voicevox_core_ruby_api/ext/voicevox_core/: Cargo.toml  extconf.rb
crates/voicevox_core_ruby_api/ext/voicevox_core/src/: lib.rs  open_jtalk.rs  result.rs  ruby_async.rs  user_dict.rs  voice_model.rs
crates/voicevox_core_ruby_api/ext/voicevox_core_ruby_api/: Cargo.toml  extconf.rb
crates/voicevox_core_ruby_api/ext/voicevox_core_ruby_api/src/: lib.rs
crates/voicevox_core_ruby_api/lib/: voicevox_core.rb
crates/voicevox_core_ruby_api/lib/voicevox_core_ruby_api/: model.rb
crates/voicevox_core_ruby_api/sig/: fiddle.rbs  voicevox_core.rbs  voicevox_core_ruby_api.rbs
crates/voicevox_core_ruby_api/sig/voicevox_core/: dict.rbs  model.rbs
crates/voicevox_core_ruby_api/spec/: dict_spec.rb  spec_helper.rb  voice_model_spec.rb  voicevox_core_ruby_api_spec.rb  voicevox_core_spec.rb
crates/voicevox_core_wasm_api/: Cargo.toml  README.md  build.rs  library.js
crates/voicevox_core_wasm_api/src/: common.rs  constants.rs  lib.rs
crates/voicevox_core_wasm_api/src/commands/: init.rs  load_model.rs  mod.rs  model.rs  synthesizer.rs  system.rs
crates/voicevox_core_wasm_api/web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/voicevox_core_wasm_api/web/src/: voicevoxCore.ts
example/ruby/: Gemfile  main.rb
example/wasm/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
example/wasm/src/: App.vue  style.css  voicevoxCore.ts
example/wasm/src/artifacts/: voicevox_core_wasm_api.d.ts
example/wasm/src/components/: HelloWorld.vue
