[package]
name = "voicevox_core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
directml = ["ort/directml"]

[dependencies]
anyhow.workspace = true
# async_zip.workspace = true
cfg-if = "1.0.0"
derive-getters.workspace = true
derive-new = "0.5.9"
derive_more.workspace = true
duplicate = "1.0.0"
easy-ext.workspace = true
educe = "0.4.23"
enum-map = "3.0.0-beta.1"
fs-err.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
nanoid = "0.4.0"
ndarray.workspace = true
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
voicevox_core_macros = { path = "../voicevox_core_macros" }
zip = { version = "0.6.6", default-features = false, features = [
  "deflate-zlib",
] }

[dependencies.ort]
version = "1.16.3"
default-features = false
features = ["half", "copy-dylibs"]

[dependencies.open_jtalk]
# git = "https://github.com/VOICEVOX/open_jtalk-rs.git"
# rev = "a16714ce16dec76fd0e3041a7acfa484921db3b5"
path = "../../../open_jtalk-rs/crates/open_jtalk"

[dev-dependencies]
heck = "0.4.0"
pretty_assertions = "1.3.0"
rstest.workspace = true
#test_util.workspace = true

[target."cfg(windows)".dependencies]
humansize = "2.1.2"
windows = { version = "0.43.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dxgi",
] }

[lints.rust]
unsafe_code = "deny"      # FIXME: あまり意味が無くなっているため潔く`allow`にする。あるいはunsafeを撲滅する
rust_2018_idioms = "warn"
