[package]
name = "voicevox_core_wasm_api"
version.workspace = true
edition.workspace = true
publish.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
voicevox_core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
base64 = "0.21.5"
tempfile.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
strum = { workspace = true, features = ["derive"] }
zip.workspace = true
chrono = { workspace = true, default-features = false, features = ["clock"] }
log.workspace = true
env_logger = "0.11.1"
